fixes left aligned h2 headers bug

--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -1,6 +1,6 @@
 /* Body */
 body{
-    font-family: "Open Sans", Helvetica, sans-serif;
+    font-family: Helvetica, "Open Sans", sans-serif;
     margin-top: 12px;
     background-color: #F5F8FC; 
 }
@@ -18,8 +18,8 @@ h1{
 h2{
 	padding: 0px;
     margin: 10px; 
-	font-size:20px;
-	text-align:center;
+	font-size: 20px;
+	text-align: center;
 }
 
 .legendText{
@@ -40,8 +40,8 @@ p{
 	padding: 5px;
 	margin: 6px;
     border-radius: 5px;
-	background-color:#1F7A8C;
-    text-align:center;
+	background-color: #1F7A8C;
+    text-align: center;
 }
 
 .banner p{
@@ -76,6 +76,7 @@ p{
 	border-radius: 5px;
 	margin: 6px;
 	margin-bottom: 12px;
+	justify-content: center;
 }
 
 
